[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/GFX/PNG/Tiles/tile_473.png" type="Texture" id=1]
[ext_resource path="res://Assets/SFX/doorOpen_2.ogg" type="AudioStream" id=2]
[ext_resource path="res://Assets/SFX/doorClose_4.ogg" type="AudioStream" id=3]
[ext_resource path="res://Assets/Scripts/Porta.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 42 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32, 10 )

[sub_resource type="OccluderPolygon2D" id=3]
closed = false
polygon = PoolVector2Array( -32.1362, -8.7856, 31.9846, -8.7856, 31.8493, 8.80027, -32.2715, 9.2061 )

[sub_resource type="Animation" id=4]
resource_name = "AbrirPorta"
length = 4.5
tracks/0/type = "value"
tracks/0/path = NodePath("ImgPorta:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 3, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -64, 0 ), Vector2( -64, 0 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "audio"
tracks/1/path = NodePath("AudioStreamPlayer2D")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 2 )
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 3 )
} ],
"times": PoolRealArray( 0, 3.9 )
}

[node name="Porta" type="Area2D"]
collision_layer = 2
collision_mask = 5
script = ExtResource( 4 )

[node name="DetectorPlayer" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="ImgPorta" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="StaticBody2D" type="StaticBody2D" parent="ImgPorta"]
collision_layer = 2
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="ImgPorta/StaticBody2D"]
shape = SubResource( 2 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="ImgPorta"]
occluder = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/AbrirPorta = SubResource( 4 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
[connection signal="body_entered" from="." to="." method="_on_Porta_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Porta_body_exited"]
[connection signal="input_event" from="." to="." method="_on_Porta_input_event"]
